--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+*,
+*::after,
+*::before{
+  box-sizing: border-box;
+  color: #fff;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.weather-img{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weather-container{
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: grayscale(50%);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.weather-info{
+  height: 100vh;
+  background: rgb(144, 144, 245);
+  backdrop-filter: blur(10px);
+  width: 40%;
+  min-width: 280px;
+  position: absolute;
+  right: 0;
+  list-style: none;
+}
+.weather-info li{
+  position: relative;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+.weather-info li .weather-info__content{
+  color: #fff;
+  margin-bottom: 60px;
+}
+.weather-info li .weather-info__content h3{
+  display: inline-block;
+  position: absolute;
+  left: 10%;
+}
+.weather-info li .weather-info__content .weather-info__content-data{
+  position: absolute;
+  right: 10%;
+}
+.separator{
+  width: 80%;
+  height: 3px;
+  background-color: rgba(204, 204, 204, 0.61);
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+ul li h2{
+  position: absolute;
+  left: 10%;
+  top: 40px;
+}
+.weather{
+  position: absolute;
+  bottom: 120px;
+  left: 80px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.weather-content button{
+  font-size: 7rem;
+  font-weight: 400;
+  background: none;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-content div h3{
+  text-shadow: rgb(0, 0, 0) 1px 0 10px;
+}
+.weather-location{
+  position: absolute;
+  bottom: 80px;
+  left: 300px;
+}
+.weather-location h3:nth-child(1){
+  font-size: 3rem;
+}
+.weather-icon{
+  position: absolute;
+  bottom: 40px;
+  left: 500px;
 }
