--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -9,30 +9,34 @@ body{
   min-height: 100vh;
 }
 
-.sk-bounce {
-    width: var(--sk-size);
-    height: var(--sk-size);
-    position: relative;
+.container_loading{
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
 }
-  
-.sk-bounce-dot {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: var(--sk-color);
-    opacity: 0.6;
-    position: absolute;
-    top: 0;
-    left: 0;
-    animation: sk-bounce 2s infinite cubic-bezier(0.455, 0.03, 0.515, 0.955); 
+
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
 }
-  
-.sk-bounce-dot:nth-child(2) { animation-delay: -1.0s; }
-  
-@keyframes sk-bounce {
-    0%, 100% {
-      transform: scale(0);
-    } 45%, 55% {
-      transform: scale(1); 
-    } 
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
