--- a/src/App.css
+++ b/src/App.css
@@ -2,70 +2,21 @@
 *::after,
 *::before{
   box-sizing: border-box;
-  color: #fff;
+  color: rgb(57, 54, 54);
 }
-.weather-img{
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
+
+body{
+  display: flex;
 }
-.weather-container{
-  width: 100vw;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  filter: grayscale(50%);
-}
-.weather-info{
-  height: 100vh;
-  background: rgb(144, 144, 245);
-  backdrop-filter: blur(10px);
-  width: 40%;
-  min-width: 280px;
-  position: absolute;
-  right: 0;
-  list-style: none;
-}
-.weather-info li{
-  position: relative;
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-}
-.weather-info li .weather-info__content{
-  color: #fff;
-  margin-bottom: 60px;
-}
-.weather-info li .weather-info__content h3{
-  display: inline-block;
-  position: absolute;
-  left: 10%;
-}
-.weather-info li .weather-info__content .weather-info__content-data{
-  position: absolute;
-  right: 10%;
-}
-.separator{
-  width: 80%;
-  height: 3px;
-  background-color: rgba(204, 204, 204, 0.61);
-  margin: auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-ul li h2{
-  position: absolute;
-  left: 10%;
-  top: 40px;
-}
+
 .weather{
   position: absolute;
-  bottom: 120px;
+  bottom: 200px;
   left: 80px;
   display: flex;
 }
 .weather-content button{
+  position: absolute;
   font-size: 7rem;
   font-weight: 400;
   background: none;
@@ -88,4 +39,64 @@ ul li h2{
   position: absolute;
   bottom: 40px;
   left: 500px;
+}
+
+.weather-img{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
+.weather-container{
+  filter: grayscale(50%);
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.weather-info{
+  height: 100vh;
+  background: rgba(66, 124, 158, 0.4);
+  backdrop-filter: blur(10px);
+  width: 40%;
+  min-width: 300px;
+  position: absolute;
+  right: 0;
+  list-style: none;
+}
+
+.weather-info li{
+  position: relative;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.weather-info li .weather-info__content{
+  color: #fff;
+  margin-bottom: 60px;
+}
+.weather-info li .weather-info__content h3{
+  display: inline-block;
+  position: absolute;
+  left: 10%;
+}
+.weather-info li .weather-info__content .weather-info__content-data{
+  position: absolute;
+  right: 10%;
+}
+.separator{
+  width: 100%;
+  height: 3px;
+  background-color: rgba(9, 9, 9, 0.61);
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+ul li h2{
+  position: absolute;
+  left: 10%;
+  top: 40px;
 }
